--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,16 @@
-main {
-  min-height: 80vh;
+.jumbotron {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-image: url("../public/images/jumbotron.jpg");
+  border: none;
+}
+
+.jumbotron h2 {
+  text-align: center;
+  font-size: 3.125rem;
+  color: #fff;
+  text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
 }
